@@ -1,4 +1,6 @@
 Changes towards version 0.5:
+- %APPDATA% fallback no longer to "../userdata", but to "./userdata",
+  as we don't chdir() to the content dir anymore. - SvdB
 - Commander Hayes flickering lights animation now properly reenabled
   when applicable (bug #777) - Alex
 - Refactored setupmenu code to use generic widgets - Michael
